Fix client logos not showing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1182,11 +1182,7 @@ footer {
 }
 
 .client-slot a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  display: contents;
 }
 
 .client-slot:hover {
